@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2011, 2015, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2011, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -70,7 +70,7 @@ public class FireButtonBaseTest {
     }
 
     @Before public void setup() throws Exception {
-        btn = (ButtonBase) type.newInstance();
+        btn = (ButtonBase) type.getDeclaredConstructor().newInstance();
     }
 
     @Test public void onActionCalledWhenButtonIsFired() {
