@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008, 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2008, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -59,14 +59,14 @@ public class UnaryExprTest extends PrimaryExprTest {
     public void positive() throws Exception {
         UnaryExpr tree = parseTreeFor("+72.4");
         assertEquals(tree.getOp(), UnaryOpType.PLUS);
-        assertEquals(((LiteralExpr)tree.getExpr()).getValue(), new Float(72.4));
+        assertEquals(((LiteralExpr)tree.getExpr()).getValue(), Float.valueOf(72.4f));
     }
 
     @Test
     public void negative() throws Exception {
         UnaryExpr tree = parseTreeFor("-72.4");
         assertEquals(tree.getOp(), UnaryOpType.MINUS);
-        assertEquals(((LiteralExpr)tree.getExpr()).getValue(), new Float(72.4));
+        assertEquals(((LiteralExpr)tree.getExpr()).getValue(), Float.valueOf(72.4f));
     }
 
     @Test
